demo-all-in-one.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-svc
spec:
  hosts:
    - grpc-svc
  http:
    - match:
        - headers:
            label:
              exact: error
      route:
        - destination:
            host: grpc-svc-v2
            subset: v1
#      retries:
#        attempts: 3
#        perTryTimeout: 1s
#        retryOn: internal
    - route:
        - destination:
            host: grpc-svc
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-svc-v2
spec:
  host: grpc-svc-v2
  subsets:
    - name: v1
  trafficPolicy:
    outlierDetection:
      baseEjectionTime: 30s
      consecutiveErrors: 1
      interval: 1s
      maxEjectionPercent: 100
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: "v1"
  labels:
    app: web
    service: web
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
#  namespace: "v1"
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-svc
  labels:
    app: grpc
    service: grpc
spec:
  ports:
    - port: 50001
      name: grpc
  selector:
    app: grpc
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-svc-v2
  labels:
    app: grpc
    service: grpc
spec:
  ports:
    - port: 50001
      name: grpc
  selector:
    app: grpc
    version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-v1
  labels:
    app: grpc-v1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
      version: v1
  template:
    metadata:
      labels:
        app: grpc
        version: v1
    spec:
      containers:
        - name: grpc-v1
          image: grpc:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-v2
  labels:
    app: grpc-v2
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc
      version: v2
  template:
    metadata:
      labels:
        app: grpc
        version: v2
    spec:
      containers:
        - name: grpc-v2
          image: grpc:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50001
---
